--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,8 @@
 				<div class="st-testi-slider swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="st-testi-item">
+							<div class="st-testi-item position-relative">
+								<span class="item-bg img-cover position-absolute"><img src="assets/img/team/tst-bg.png" alt=""></span>
 								<div class="inner-wrap d-flex">
 									<div class="item-img img-cover">
 										<img src="assets/img/team/tst1.png" alt="">
@@ -1069,7 +1070,8 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="st-testi-item">
+							<div class="st-testi-item position-relative">
+								<span class="item-bg img-cover position-absolute"><img src="assets/img/team/tst-bg.png" alt=""></span>
 								<div class="inner-wrap d-flex">
 									<div class="item-img img-cover">
 										<img src="assets/img/team/tst2.png" alt="">
@@ -1094,7 +1096,8 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="st-testi-item">
+							<div class="st-testi-item position-relative">
+								<span class="item-bg img-cover position-absolute"><img src="assets/img/team/tst-bg.png" alt=""></span>
 								<div class="inner-wrap d-flex">
 									<div class="item-img img-cover">
 										<img src="assets/img/team/tst3.png" alt="">
@@ -1119,7 +1122,8 @@
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="st-testi-item">
+							<div class="st-testi-item position-relative">
+								<span class="item-bg img-cover position-absolute"><img src="assets/img/team/tst-bg.png" alt=""></span>
 								<div class="inner-wrap d-flex">
 									<div class="item-img img-cover">
 										<img src="assets/img/team/tst1.png" alt="">
@@ -1212,18 +1216,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="st-blog-more mt-40 position-relative over-hidden">
-					<div class="st-blog-shape marquee-left">
-						<span><img src="assets/img/about/line-shape.svg" alt=""></span>
-						<span><img src="assets/img/about/line-shape.svg" alt=""></span>
-					</div>
-					<div class="st-btn d-flex justify-content-center">
-						<a href="#">
-							<span>View All Services</span>
-							<i><img src="assets/img/icon/ic2.svg" alt=""></i>
-						</a>
-					</div>
-				</div>
+			</div>
+		</div>
+		<div class="st-blog-more mt-40 position-relative over-hidden">
+			<div class="st-blog-shape marquee-left">
+				<span><img src="assets/img/about/line-shape.svg" alt=""></span>
+				<span><img src="assets/img/about/line-shape.svg" alt=""></span>
+			</div>
+			<div class="st-btn d-flex justify-content-center">
+				<a href="#">
+					<span>View All Services</span>
+					<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+				</a>
 			</div>
 		</div>
 	</section>	
@@ -1244,8 +1248,9 @@
 			<i class="fa-solid fa-arrow-right"></i>
 		</div>
 		<div class="st-cont-content over-hidden pt-80 pb-130 position-relative">
-			<div class="st-cont-bg img-cover img-parallax position-absolute"><img src="assets/img/about/cnt-bg.png" alt=""></div>
-			<div class="st-cont-form">
+			<div class="st-cont-bg img-cover img-parallax position-absolute"><img src="assets/img/about/cnt-bg.jpg" alt=""></div>
+			<div class="st-cont-form position-relative">
+				<span class="st-cont-shape position-absolute"><img src="assets/img/icon/ic12.png" alt=""></span>
 				<form action="#" method="post">
 					<div class="row">
 						<div class="col-md-6">
